Dark mode toggle in menu, sticky menu & some contrast color fixes for dark mode

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,10 +6,13 @@
 @source '../**/*.blade.php';
 @source '../**/*.js';
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 @theme {
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
     'Segoe UI Symbol', 'Noto Color Emoji';
     --breakpoint-xs: 30rem;
+    --breakpoint-mmd: 54rem;
 }
 
 @layer components {
